force-app/main/default/objects/Dan360_SalesArea__c/Dan360_SalesArea__c.object-meta.xml
<CustomObject>
    <description>Sales Area</description>
    <label>Sales Area</label>
    <nameField>
        <label>Nombre de Sales Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Area</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>