force-app/main/default/objects/Dan360_SalesArea__c/fields/Dan360_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DistributionChannel__c</fullName>
    <description>Distribution channel</description>
    <label>Distribution channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>