force-app/main/default/objects/Dan360_SalesArea__c/fields/Dan360_Division__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Division__c</fullName>
    <description>División</description>
    <label>División</label>
    <length>255</length>
    <type>Text</type>
</CustomField>