force-app/main/default/objects/Dan360_SalesArea__c/fields/Dan360_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesOrganization__c</fullName>
    <description>Sales Organization</description>
    <label>Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>